--- a/globe/templates/base.html
+++ b/globe/templates/base.html
@@ -22,13 +22,12 @@
   	<script
     	src="https://code.jquery.com/jquery-3.2.1.min.js"
     	integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    	crossorigin="anonymous">
-	</script>
-	<!--include css -->
+    	crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="/static/css/main.css">
 </head>
 
 
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
+<nav class="navbar navbar-light bg-light">
  	<a class="navbar-brand" href="/">Globe</a>
  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     	<span class="navbar-toggler-icon"></span>
@@ -41,66 +40,11 @@
       		<li class="nav-item">
         		<a class="nav-link" href="#">Link</a>
       		</li>
-      		<li class="nav-item">
-        		<a class="nav-link disabled" href="#">Disabled</a>
-      		</li>
     	</ul>
-    	<form class="form-inline my-2 my-lg-0">
-      		<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      		<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    	</form>
   	</div>
 </nav>
 
     {% block content %}
     {% endblock %}
 </body>
-
-<!-- Pushy JS -->
-<script src="/static/js/pushy.min.js"></script>
-
-
-<footer class="site-footer">
-  <div class="bottom">
-	<div class="container no-padding">
-	  <div class="row">
-
-		<div class="col-lg-6 col-xs-12 text-lg-left text-center">
-		  <p class="copyright-text">
-			© Globe 2017
-		  </p>
-		  <div class="cheers-for-the-promo-guys">
-			<a href="https://whaticando.co.uk/">Created</a> by Josh Tait
-		  </div>
-		</div>
-
-		<div class="col-lg-6 col-xs-12 text-lg-right text-center">
-		  <ul class="list-inline">
-			<li class="list-inline-item">
-			  <a href="/admin">Admin</a>
-			</li>
-
-			<li class="list-inline-item">
-			  <a href="#about">Sitemap</a>
-			</li>
-
-			<li class="list-inline-item">
-			  <a href="#features">Privacy Policy</a>
-			</li>
-
-			<li class="list-inline-item">
-			  <a href="#contact">Contact</a>
-			</li>
-		  </ul>
-		  <div class="social">
-  				<a href="https://facebook.com/TCOEPD" target="_blank">Facebook</a> &middot; <a href="https://twitter.com/" target="_blank"> Twitter </a>
-		  </div>
-  		</div>
-
-		</div>
-
-	  </div>
-	</div>
-  </div>
-</footer>
 </html>
