--- a/globe/templates/index.html
+++ b/globe/templates/index.html
@@ -5,8 +5,10 @@
  	<div class="container text-center">
 		<div class="row">
 			<div class="col">
-				<h1>This is Globe</h1>
-				<h3>Explore Earth. In 3D, on your smartphone.</h3>
+				<h1>This is Globe.</h1>
+				<h3>Explore Earth.
+				<br /> In 3D, on your smartphone.</h3>
+				<a href="/explore" class="btn btn-primary mt-3">Explore</a>
 			</div>
   		</div>
 	</div>
