--- a/globe/static/scss/typography.scss
+++ b/globe/static/scss/typography.scss
@@ -1,6 +1,21 @@
-$font-stack:  'Titillium Web', sans-serif;
-$default-font-wieght: 400;
-$default-color: #272727;
+$font-stack-headings:  'Muli', sans-serif;
+$font-stack-body: 'Open Sans', sans-serif;
+
+$heading-color: #272727;
+$body-color: #161616;
 
 $heading-spacing: .6px;
 $heading-margin: 1%;
+
+
+h1, h2, h3, h4, h5, h6{
+	font-family: $font-stack-headings;
+	letter-spacing: $heading-spacing;
+	margin: $heading-margin;
+	color: $heading-color;
+}
+
+body, p, i{
+	font-family: $font-stack-body;
+	color: $body-color;
+}
