--- a/globe/templates/index.html
+++ b/globe/templates/index.html
@@ -15,4 +15,11 @@
 </section>
 
 
+<a class="unsplash-credit" href="https://unsplash.com/@nasa?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer"
+title="Download free do whatever you want high-resolution photos from NASA">
+Image Credits: NASA</a>
+
+
+
+
 {% endblock %}
