--- a/globe/static/scss/typography.scss
+++ b/globe/static/scss/typography.scss
@@ -13,6 +13,7 @@ h1, h2, h3, h4, h5, h6{
 	letter-spacing: $heading-spacing;
 	margin: $heading-margin;
 	color: $heading-color;
+	text-align: center;
 }
 
 body, p, i{
