--- a/globe/templates/base.html
+++ b/globe/templates/base.html
@@ -23,6 +23,7 @@
 
 	<link rel="stylesheet" href="/static/css/main.css">
 
+	<script src="https://use.fontawesome.com/1d7cf6c703.js"></script>
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
