--- a/globe/templates/register.html
+++ b/globe/templates/register.html
@@ -33,6 +33,9 @@
 							</div>
 					</div>
 				</div>
+				<div class="progress">
+  					<div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="33.3" aria-valuemin="0" aria-valuemax="100" style="width: 33.3%; height: 30px;"></div>
+				</div>
 			</div>
   		</div>
 	</div>
