remove showControls param in iframe

--- a/globe/templates/feed.html
+++ b/globe/templates/feed.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-<iframe width="600" height="400" allowfullscreen style="border-style:none;" src="https://cdn.pannellum.org/2.3/pannellum.htm#panorama=https%3A//i.imgur.com/L6SiMTm.jpg&autoLoad=true&showControls=false"></iframe>
+<iframe width="600" height="400" allowfullscreen style="border-style:none;" src="https://cdn.pannellum.org/2.3/pannellum.htm#panorama=https%3A//i.imgur.com/L6SiMTm.jpg&autoLoad=true"></iframe>
 
 </body>
 </html>
