--- a/globe/static/scss/typography.scss
+++ b/globe/static/scss/typography.scss
@@ -1,7 +1,7 @@
-$font-stack-headings:  'Muli', sans-serif;
+$font-stack-headings: 'Muli', sans-serif;
 $font-stack-body: 'Open Sans', sans-serif;
 
-$heading-color: #272727;
+$heading-color: #283c86;
 $body-color: #161616;
 
 $heading-spacing: .6px;
@@ -13,10 +13,14 @@ h1, h2, h3, h4, h5, h6{
 	letter-spacing: $heading-spacing;
 	margin: $heading-margin;
 	color: $heading-color;
-	text-align: center;
 }
 
 body, p, i{
 	font-family: $font-stack-body;
 	color: $body-color;
+}
+
+.section-heading{
+	color: $heading-color;
+	padding-bottom: 5%;
 }
