--- a/globe/templates/user/profile.html
+++ b/globe/templates/user/profile.html
@@ -1,1 +1,71 @@
-hey {{user.forename}}, this is your profile.
+{% extends 'base.html' %}
+{% block content %}
+
+<section>
+	<div class="profile-header">
+		<div class="row">
+			<div class="col-xs-12 col-md-2">
+				<img class="profile-header-img" src="{{url_for('static', filename='img/default_profile.jpg')}}" width="150px" height="150px">
+			</div>
+			<div class="col-xs-12 col-md-8">
+				<div class="profile-header-intro">
+					<h1>Joe Bloggs</h1>
+					<h4>Edinburgh, UK</h4>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="profile-sub-nav">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="/">About</a>
+			<a class="nav-item nav-link" href="/explore/">Photos</a>
+			<a class="nav-item nav-link" href="/explore/">Followers</a>
+		</nav>
+	</div>
+	<div class="container">
+		<div class="profile-main">
+			<h2 class="section-heading">Bio</h2>
+		</div>
+		<div class="profile-main_stats">
+			<h2>Quick Maffs</h2>
+			<div class="row text-center">
+				<div class="col-xs-12 col-sm-4">
+					10
+				</div>
+				<div class="col-xs-12 col-sm-4">
+					10
+				</div>
+				<div class="col-xs-12 col-sm-4">
+					10
+				</div>
+			</div>
+		</div>
+		<div class="profile-main_gallery">
+			<h2 class="section-heading">Photos</h2>
+			<div class="row">
+				<div class="col-xs-12 col-sm-4">
+            		<div class="card">
+              				<img src="{{url_for('static', filename='img/default_profile.jpg')}}" alt="Card image cap" width="100%" height="250px">
+              				<p class="card-text">Label</p>
+            			</div>
+					</div>
+					<div class="col-xs-12 col-sm-4">
+            			<div class="card">
+              				<img src="{{url_for('static', filename='img/default_profile.jpg')}}" alt="Card image cap" width="100%" height="250px">
+              				<p class="card-text"></p>
+            			</div>
+					</div>
+					<div class="col-xs-12 col-sm-4">
+            			<div class="card">
+              				<img src="{{url_for('static', filename='img/default_profile.jpg')}}" alt="Card image cap" width="100%" height="250px">
+              				<p class="card-text"></p>
+            			</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+</section>
+
+{% endblock %}
