--- a/globe/static/scss/components.scss
+++ b/globe/static/scss/components.scss
@@ -1,8 +1,19 @@
-.card {
-	margin: 5%;
+.card{
+	margin: 7%;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-	padding: 2%
+	padding: 0;
+}
+.card-head{
+	padding: 2%;
+}
+.card-body{
+}
+.card-footer{
+	padding: 1% 3%; 
+	border: 0;
+	background: inherit;
+	text-align: left;
 }
 
 .card:hover {
