--- a/globe/templates/base.html
+++ b/globe/templates/base.html
@@ -26,7 +26,7 @@
 	<script src="https://use.fontawesome.com/1d7cf6c703.js"></script>
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light main-nav">
 	<a class="navbar-brand" href="/">Globe</a>
  		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="navbar-toggler-icon"></span>
