--- a/globe/static/scss/components.scss
+++ b/globe/static/scss/components.scss
@@ -8,17 +8,15 @@
 	padding: 2%;
 }
 .card-body{
+
 }
 .card-footer{
-	padding: 1% 3%; 
+	padding: 1% 3%;
 	border: 0;
 	background: inherit;
 	text-align: left;
 }
 
-.card:hover {
-	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
 
 .card .form-control{
 	margin: 1% 0;
@@ -52,4 +50,218 @@
 .main-nav{
 	border-bottom: 4px solid #283c86;
 	padding: 1%;
+}
+
+
+.filter{
+	text-align: left;
+	padding: 5%;
+	margin: 3% 0 0 3%;
+}
+
+
+.feed-filter h3{
+	text-align: center;
+}
+
+#feed-upload{
+	padding: 2.5%;
+	margin: 1.2% 0 0 5%;
+	border-bottom-right-radius: 0;
+}
+
+.profile-thumb{
+	border: 2px solid #283c86;
+	margin-right: 1%;
+	border-radius: 100%;
+}
+
+.feed-upload{
+	color: #283c86;
+	background: #f0f0f0;
+	width: 100%;
+	padding: 1.5% 2%;
+	border: 2px solid #ccc;
+	border-bottom-right-radius: 0;
+}
+
+
+
+.feed-upload_main{
+	width: 100%;
+	margin: 1% 5%;
+	padding: 2%;
+}
+
+
+.form-wrapper{
+	width: 100%;
+}
+
+.form-control{
+	width: 80%;
+	margin: 1%;
+}
+
+#upload_form_spacer{
+	width: 100%;
+}
+
+.img-upload-target{
+	padding: 3%;
+	color: #283c86;
+	border: 2px dotted #283c86;
+}
+
+
+.tiny-form{
+	width: 70%;
+}
+
+.icon-btn-prepend{
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
+}
+
+.icon-btn-append{
+	position: relative;
+	left: 4px;
+	border: 2px solid inherit #283c86;
+	background: inherit;
+}
+
+.m-l-4{
+	margin-left: 3.5%;
+}
+
+.no-padding{
+	padding:0;
+	margin:0;
+}
+
+
+#minimise-filter{
+	position: relative;
+	left: 100%;
+	bottom: 5%;
+	background: inherit;
+}
+
+.mini-filter {
+	padding: 2% 2.5% 2%;
+	border: 2px solid #ccc;
+	border-left:0;
+}
+
+#minimise-upload{
+	position: relative;
+	left: 94.5%;
+	bottom: 1px;
+	background: #fff;
+	z-index: 9999;
+}
+
+.mini-upload{
+	padding: 1%;
+	border: 2px solid #ccc;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+
+
+.form-check-wrapper{
+	margin: 10%;
+}
+
+
+.social-head{
+	padding: 5%;
+	margin-top: 1.3rem;
+}
+.card-post-location{
+	margin-left: 2%;
+}
+
+.card-post-timestamp{
+	position: absolute;
+	right: 25px;
+	top: 25px;
+}
+.caption{
+	width: 65%;
+}
+.card-footer{
+	display: inline-flex;
+}
+.controls{
+	width: 25%;
+	line-height: 2rem;
+}
+.controls ul{
+	display: inline-flex;
+}
+.controls ul > li{
+	list-style: none;
+	margin: 10%;
+}
+.seperator{
+	border: 1px solid #ccc;
+	border-top: 0;
+	border-bottom: 0;
+	height: 2rem;
+}
+
+
+.inline{
+	display: inline-flex;
+}
+
+
+.fab{
+	position: fixed;
+	bottom: 5%;
+	right: 5%;
+	border: 2px solid #f0f0f0;
+	background: #283c86;
+	width: 4rem;
+	height: 4rem;
+	border-radius: 100%;
+	text-align: center;
+	font-size: 2.4rem;
+	color: #f0f0f0;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.fab-mini{
+	display: none;
+	background: #00ff00;
+	position: fixed;
+	right: 6%;
+	bottom: 17%;
+	width: 2.5rem;
+	height: 2.5rem;
+	border-radius: 100%;
+	color: #f0f0f0;
+	text-align: center;
+	font-size: 1.75rem;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.fab:hover{
+	cursor: pointer;
+}
+
+.fab:hover{
+	.fab-mini{
+		display: block;
+	}
+}
+
+
+.hr{
+	padding: 1%;
+	width: 60%;
+	border-top: 2px dotted orange;
+	margin:0;
+	margin-left: 20%;
 }
