--- a/globe/templates/user/profile.html
+++ b/globe/templates/user/profile.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<body data-spy="scroll" data-target=".profile-header-collapse" data-offset="50">
 <section>
 	<div class="profile-header">
 		<div class="row">
@@ -15,8 +15,12 @@
 			</div>
 		</div>
 	</div>
+	<div class="profile-header-collapse">
+		<img class="profile-header-img" src="{{url_for('static', filename='img/default_profile.jpg')}}" width="75px" height="75px">
+		<h3>Joe Bloggs</h3>
+	</div>
 	<div class="profile-sub-nav">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top sticky-top">
 			<a class="navbar-brand" href="/">About</a>
 			<a class="nav-item nav-link" href="/explore/">Photos</a>
 			<a class="nav-item nav-link" href="/explore/">Followers</a>
@@ -41,31 +45,93 @@
 			</div>
 		</div>
 		<div class="profile-main_gallery">
-			<h2 class="section-heading">Photos</h2>
-			<div class="row">
-				<div class="col-xs-12 col-sm-4">
-            		<div class="card">
-              				<img src="{{url_for('static', filename='img/default_profile.jpg')}}" alt="Card image cap" width="100%" height="250px">
-              				<p class="card-text">Label</p>
-            			</div>
+			<div class="row ma-1">
+				<div class="col text-left">
+					<h2 class="section-heading gallery-nav">Photos</h2>
+				</div>
+				<div class="col text-center">
+					<div class="photos-toggle gallery-nav inline">
+						<a href="#0" class="active">Grid</a>
+
+						<span class="seperator"></span>
+
+						<a href="#0" class="">Map</a>
 					</div>
-					<div class="col-xs-12 col-sm-4">
-            			<div class="card">
-              				<img src="{{url_for('static', filename='img/default_profile.jpg')}}" alt="Card image cap" width="100%" height="250px">
-              				<p class="card-text"></p>
-            			</div>
-					</div>
-					<div class="col-xs-12 col-sm-4">
-            			<div class="card">
-              				<img src="{{url_for('static', filename='img/default_profile.jpg')}}" alt="Card image cap" width="100%" height="250px">
-              				<p class="card-text"></p>
-            			</div>
+				</div>
+				<div class="col text-right">
+					<div class="stat gallery-nav">
+						<i class="fa fa-camera-retro"></i> 622
 					</div>
 				</div>
 			</div>
+			<div class="row no-gutters">
+				<div class="col-xs-12 col-sm-4">
+            		<div class="card gallery">
+              			<img src="{{url_for('static', filename='img/default_profile.jpg')}}" alt="Card image cap" width="100%" height="250px">
+            		</div>
+				</div>
+				<div class="col-xs-12 col-sm-4">
+            			<div class="card gallery">
+              				<img src="{{url_for('static', filename='img/default_profile.jpg')}}" alt="Card image cap" width="100%" height="250px">
+            			</div>
+					</div>
+				<div class="col-xs-12 col-sm-4">
+            			<div class="card gallery">
+              				<img src="{{url_for('static', filename='img/default_profile.jpg')}}" alt="Card image cap" width="100%" height="250px">
+              				<p class="card-text"></p>
+            			</div>
+					</div>
+			</div>
+
+			<div class="row no-gutters">
+				<div class="col-xs-12 col-sm-4">
+            			<div class="card gallery">
+              				<img src="/static/img/default_profile.jpg" alt="Card image cap" width="100%" height="250px">
+              				<p class="card-text"></p>
+            			</div>
+					</div>
+				<div class="col-xs-12 col-sm-4">
+            			<div class="card gallery">
+              				<img src="/static/img/default_profile.jpg" alt="Card image cap" width="100%" height="250px">
+              				<p class="card-text"></p>
+            			</div>
+					</div>
+				<div class="col-xs-12 col-sm-4">
+            		<div class="card gallery">
+              				<img src="/static/img/default_profile.jpg" alt="Card image cap" width="100%" height="250px">
+            			</div>
+					</div>
+				</div>
+
+				<div class="row ma-1">
+					<div class="col text-left">
+						<p class="gallery-nav">Previous</h2>
+					</div>
+					<div class="col text-center">
+						<div class="gallery-nav inline">
+							<a href="#0" class="active">1</a> of <a href="#0" class="">6</a>
+						</div>
+					</div>
+					<div class="col text-right">
+						<p class="gallery-nav">Next</h2>
+					</div>
+				</div>
+
+
+			</div>
 		</div>
-	</div>
+	</div><!--/container-->
 
 </section>
+<script>
+$(document).scroll(function () {
+    var y = $(this).scrollTop();
+    if (y > 385) {
+        $('.profile-header-collapse').fadeIn("smooth");
+    } else if (y < 385){
+        $('.profile-header-collapse').fadeOut("smooth");
+    }
 
+});
+</script>
 {% endblock %}
