--- a/globe/static/scss/components.scss
+++ b/globe/static/scss/components.scss
@@ -1,6 +1,6 @@
 .card{
 	margin: 7%;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	/*box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
 	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 	padding: 0;
 }
@@ -8,7 +8,7 @@
 	padding: 2%;
 }
 .card-body{
-
+	padding: 1.25rem 0;
 }
 .card-footer{
 	padding: 1% 3%;
@@ -155,7 +155,7 @@
 
 #minimise-upload{
 	position: relative;
-	left: 94%;
+	left: 95%;
 	bottom: 1px;
 	background: #fff;
 	z-index: 9999;
@@ -163,8 +163,8 @@
 }
 
 .mini-upload{
-	padding: 2%;
-	border: 2px solid #ccc;
+	padding: 1%;
+	border: 1px solid #0000001a;
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
 }
@@ -176,8 +176,9 @@
 
 
 .social-head{
-	padding: 5%;
+	padding: 2%;
 	margin-top: 1.3rem;
+	margin-left: .5rem;
 }
 .card-post-location{
 	margin-left: 2%;
@@ -189,13 +190,16 @@
 	top: 25px;
 }
 .caption{
-	width: 65%;
+	width: 90%;
+	font-size: .9em;
 }
 .card-footer{
 	display: inline-flex;
+	justify-content: center;
+	align-items: center;
 }
 .controls{
-	width: 25%;
+	width: 20%;
 	line-height: 2rem;
 }
 .controls ul{
@@ -303,4 +307,74 @@
 	position: relative;
 	top: -8rem;
 	text-align: center;
+}
+
+
+.social-head, .profile-name{
+	display: inline-flex;
+}
+.profile-creds{
+	margin-left: .5rem;
+}
+.profile-thumb{
+
+}
+
+
+.post-loc{
+	font-size: .8rem;
+}
+
+#map_canvas{
+	position: absolute;
+	top:0;
+	left:0;
+	width: 100%;
+	height: 100%;
+	padding: 10%;
+	border: 2px solid #000;
+	z-index: 0;
+}
+
+.map-filter{
+	padding: 1%;
+	display: inline-flex;
+	width: 80%;
+	z-index: 999;
+	position: absolute;
+	top: 5px;
+	left: 0%;
+	margin: 1px 11%;
+	background: #f0f0f0;
+	border-bottom: 2px solid teal;
+}
+.map-filter form{
+	width: 100%;
+	/*override the default form display property */
+	display: inline-flex !important;
+}
+.filter-results{
+	position: absolute;
+	top: 4.9rem;
+	left: 0;
+	padding: 10px;
+	background: #f1f1f1;
+	color: teal;
+	margin: 1% 35%;
+	text-align: center;
+	width: 30%;
+	overflow-x: hidden;
+	z-index: 999;
+	font-size: .8em;
+	border-bottom-left-radius: 50px;
+	border-bottom-right-radius: 50px;
+}
+
+.map-filter .form-control{
+	width: 100%;
+}
+.map-full{
+	overflow-x: hidden;
+	width: 100%;
+	max-width: 100%;
 }
