--- a/globe/templates/base.html
+++ b/globe/templates/base.html
@@ -14,38 +14,49 @@
 
   <link rel="canonical" href="">
 
-    <!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Muli|Open+Sans" rel="stylesheet">
+    <!-- Google Fonts
+	<link href="https://fonts.googleapis.com/css?family=Muli|Open+Sans" rel="stylesheet"> -->
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<link rel="stylesheet" href="/static/css/font-awesome.css">
 
 	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 
 	<link rel="stylesheet" href="/static/css/main.css">
 	<link rel="stylesheet" href="/static/css/remodal.css">
 	<link rel="stylesheet" href="/static/css/remodal-default-theme.css">
 
-	<script src="https://use.fontawesome.com/2fdbf3a515.js"></script>
+
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light main-nav">
-	<a class="navbar-brand" href="/">Globe</a>
- 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    		<span class="navbar-toggler-icon"></span>
-  		</button>
-  	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    	<div class="navbar-nav">
-			<a class="nav-item nav-link" href="/explore/">Explore</a>
-      		<a class="nav-item nav-link" href="/upload/">Upload</a>
-      		<a class="nav-item nav-link disabled" href="/profile/">Profile</a>
-    	</div>
-  	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<a class="navbar-brand" href="/">Globe</a>
+ 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    				<span class="navbar-toggler-icon"></span>
+  				</button>
+			</div>
+			<div class="col-xs-12 col-sm-4 col-sm-offset-6">
+  				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    				<div class="navbar-nav text-right">
+						<a class="nav-item nav-link" href="/explore/">Explore</a>
+      					<a class="nav-item nav-link" href="/upload/">Upload</a>
+      					<a class="nav-item nav-link disabled" href="/profile/">Profile</a>
+    				</div>
+  				</div>
+			</div>
+		</div>
+	</div>
 </nav>
 
     {% block content %}
     {% endblock %}
 
-	<script src="/static/remodal.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+	<script src="/static/js/font-awesome.min.js"></script>
+	<script src="/static/js/remodal.min.js"></script>
+	<script src="/static/js/bootstrap.min.js"></script>
 
 </html>
