--- a/globe/templates/feed.html
+++ b/globe/templates/feed.html
@@ -71,6 +71,7 @@
 <section class="remodal-bg" id="feed-main_posts">
 	<div class="container">
 		<div class="row align-items-center justify-content-center">
+			{% for post in posts %}
 			<div class="col-xs-12">
 				<div class="card">
 					<div class="card-head social-head">
@@ -82,18 +83,18 @@
 								<a href="/user/1">Josh</a>
 							</div>
 							<div class="post-loc">
-								<i class="fa fa-map-marker"></i> Madrid, Spain
+								<i class="fa fa-map-marker"></i> {{post.city}}
 							</div>
 						</div>
 					</div>
 					<div class="card-body">
 						<iframe allowfullscreen height="400" src=
-						"https://cdn.pannellum.org/2.3/pannellum.htm#panorama=https%3A//i.imgur.com/L6SiMTm.jpg"
+						"https://cdn.pannellum.org/2.3/pannellum.htm#panorama=https://{{post.image}}"
 						style="border-style:none;" width="600"></iframe>
 					</div>
 					<div class="card-footer">
 						<div class="caption">
-							<p>It was amazing! Check this out!</p>
+							<p>{{post.postContent}}</p>
 						</div>
 						<div class="controls">
 							<ul>
@@ -104,20 +105,26 @@
 					</div>
 				</div>
 			</div>
+			{% endfor %}
 		</div><!--/row-->
 	</div>
 	<div class="remodal" data-remodal-id="modal">
 		<button class="remodal-close" data-remodal-action="close"></button>
-		<h1>Upload An Image</h1>
-		<p>Which kind of image are you uploading?</p><br>
-		<p class="text-center">A 3D Image or Panorama</p>
-		<hr class="hr">
-		<p class="text-center">A 2D Image</p><br>
-		<a class="text-tiny text-center mb-2" href="#0">What's the
-		difference?</a><br>
-		<button class="remodal-cancel" data-remodal-action="cancel">Cancel</button>
-		<button class="remodal-confirm" data-remodal-action="confirm">Upload</button>
+		<div id="remodal-wrapper">
+			<h1>Upload An Image</h1>
+			<p>Which kind of image are you uploading?</p><br>
+			<p class="text-center"><a href="/upload/3d/">A 3D Panorama</a></p>
+			<hr class="hr">
+			<p class="text-center"><a href="/upload/2d/">A 2D Image</a></p><br>
+			<a class="text-tiny text-center mb-2" href="#0">What's the
+			difference?</a><br>
+
+			<button class="remodal-cancel" data-remodal-action="cancel">Cancel</button>
+			<button class="remodal-confirm" data-remodal-action="confirm">Upload</button>
+
+		</div>
 	</div>
 </section>
+
 
 {% endblock %}
