--- a/globe/templates/base.html
+++ b/globe/templates/base.html
@@ -14,10 +14,10 @@
 
   <link rel="canonical" href="">
 
-    <!-- Google Fonts
-	<link href="https://fonts.googleapis.com/css?family=Muli|Open+Sans" rel="stylesheet"> -->
+    <!-- Google Fonts-->
+	<link href="https://fonts.googleapis.com/css?family=Muli|Open+Sans" rel="stylesheet">
 
-	<link rel="stylesheet" href="/static/css/font-awesome.css">
+	<!--<link rel="stylesheet" href="/static/css/font-awesome.css">-->
 
 	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 
@@ -32,18 +32,22 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light main-nav">
 	<div class="container">
-		<div class="row">
-			<div class="col">
-				<a class="navbar-brand" href="/">Globe</a>
+		<div class="row" style="width:100%;">
+			<div class="col-md-2">
+				<a class="navbar-brand" href="/"><img src="/static/img/brand.png" class="img-brand" style="height:2.5rem;" alt="Globe icon logo"></a>
  					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     				<span class="navbar-toggler-icon"></span>
   				</button>
 			</div>
-			<div class="col-xs-12 col-sm-4 col-sm-offset-6">
-  				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    				<div class="navbar-nav text-right">
+			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+				<div class="navbar-nav">
+					<div class="col-md-12 text-left">
 						<a class="nav-item nav-link" href="/explore/">Explore</a>
+					</div>
+					<div class="col-md-12 text-center">
       					<a class="nav-item nav-link" href="/upload/">Upload</a>
+					</div>
+					<div class="col-md-12 text-right">
       					<a class="nav-item nav-link disabled" href="/profile/">Profile</a>
     				</div>
   				</div>
@@ -55,7 +59,7 @@
     {% block content %}
     {% endblock %}
 
-	<script src="/static/js/font-awesome.min.js"></script>
+	<!--<script src="/static/js/font-awesome.min.js"></script>-->
 	<script src="/static/js/remodal.min.js"></script>
 	<script src="/static/js/bootstrap.min.js"></script>
 
