--- a/globe/templates/feed.html
+++ b/globe/templates/feed.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<script src="/static/js/upload.js"></script>
+
 <section class="remodal-bg">
 	<div class="container no-padding" id="feed-main_controls">
 		<div class="row no-gutters" style="width:100%;">
@@ -28,7 +30,7 @@
 					</form>
 				</div><!--/filter-->
 				<div id="minimise-filter">
-					<i aria-hidden="true" class="fa fa-angle-left fa-2x mini-feed"></i>
+
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-7 m-l-4">
@@ -53,21 +55,22 @@
 					</div><!--/card-body-->
 				</div><!--/card-->
 				<div id="minimise-upload">
-					<i aria-hidden="true" class="fa fa-angle-up fa-2x mini-upload"></i>
+
 				</div>
 			</div>
 		</div><!--/row-->
 	</div><!--/feed-main_controls-->
 </section>
+
 <a href="#modal">
 	<div class="fab">
-		<!--fabby-->
-		<i class="fas fa-plus"></i>
+		P
 	</div>
 </a>
 <div class="fab-mini">
 	-
 </div>
+
 <section class="remodal-bg" id="feed-main_posts">
 	<div class="container">
 		<div class="row align-items-center justify-content-center">
@@ -110,21 +113,51 @@
 	</div>
 	<div class="remodal" data-remodal-id="modal">
 		<button class="remodal-close" data-remodal-action="close"></button>
-		<div id="remodal-wrapper">
-			<h1>Upload An Image</h1>
-			<p>Which kind of image are you uploading?</p><br>
-			<p class="text-center"><a href="/upload/3d/">A 3D Panorama</a></p>
-			<hr class="hr">
-			<p class="text-center"><a href="/upload/2d/">A 2D Image</a></p><br>
-			<a class="text-tiny text-center mb-2" href="#0">What's the
-			difference?</a><br>
+		<form class="no-style" id="form-main" method="post" action="">
+			<div id="remodal-wrapper">
+				<div id="form-stage-1" class="form-visible">
+					<h3>New Post</h3>
+					<p>First things first. Is your image 3D or 2D?</p><br>
+					<img src="/static/img/3d-model.svg" />
+					<a href="#0" class="btn btn-outline-primary" onClick="chooseImageType('panorama')">3D</a>
 
-			<button class="remodal-cancel" data-remodal-action="cancel">Cancel</button>
-			<button class="remodal-confirm" data-remodal-action="confirm">Upload</button>
+					<img src="/static/img/2d-model.svg" />
+					<a href="#0" class="btn btn-outline-primary" onClick="chooseImageType('2d')">2D</a>
+					<a class="text-tiny text-center mb-2" href="#0">I'm not sure.</a><br>
+				</div>
+				<div id="form-stage-2" class="form-hidden">
+					<h3>Choose an image</h3>
+					<div class="card-body text-center">
+						<div class="form-group">
+							<label for="image">Choose an image to upload</label>
+							<br />
+							<input type="file" required class="form-control text-center" name="image"/>
+						</div>
+						<div class="form-group">
+							<label for="description">Share your thoughts</label>
+							<textarea class="form-control text-left" name="description"></textarea>
+						</div>
+					</div>
+				</div><!--/stage-2-->
+				<div id="form-stage-3" class="form-hidden">
+					<div class="form-group m-t-1">
+						<p>Drop a pin on the map to select where you took the photo.</p>
+						<div id="map" style="width: 100%; height: 40%; padding: 25%;"></div>
+					</div>
+					<div class="form-group">
+						<label for="location">Or, enter manually:</label>
+						<input type="text" name="location" required class="form-control" placeholder="1 Drury Lane, London"></textarea>
+					</div>
+				</div>
 
-		</div>
+				<a href="#0" class="btn btn-danger" id="btn-previous" data-prev-stage=0 onclick="triggerPrevStage();">Cancel</a>
+
+				<a href="#0" class="btn btn-primary" id="btn-next" data-next-stage=2 onclick="triggerNextStage();">Next ></a>
+
+				<button class="btn btn-primary form-hidden" id="btn-submit"> Upload </button>
+			</div><!--/remodal-wrapper-->
+		</form>
 	</div>
 </section>
-
 
 {% endblock %}
