--- a/globe/templates/index.html
+++ b/globe/templates/index.html
@@ -7,7 +7,7 @@
 			<div class="col">
 				<h1>Explore Earth.</h1>
 				<h3>In 3D, on your smartphone.</h3>
-				<a href="/explore/" class="btn btn-primary mt-3">Explore</a>
+				<a href="/explore/" class="btn btn-primary btn-glb mt-3">Explore</a>
 			</div>
   		</div>
 	</div>
