--- a/globe/static/scss/components.scss
+++ b/globe/static/scss/components.scss
@@ -199,7 +199,7 @@
 
 .mini-upload{
 	padding: 1%;
-	border: 1px solid #0000001a;
+	border: 1px solid #00001a;
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
 }
