--- a/globe/templates/map.html
+++ b/globe/templates/map.html
@@ -57,11 +57,10 @@ function initialize() {
 
      //Info Window Content
     var infoWindowContent = [
-		{% for post in products %}
+		{% for post in posts %}
         	['<div class="info_content">' +
-        	'<h5><a href="/post/{{post.id}}">{{post.postContent}}</a></h5>' +
+        	'<h5><a href="/post/{{post.id}}">View</a></h5>' +
         	'<p>{{post.postContent}}</p>' +
-			'<p>{{post.image}}</p>' +
 			'</div>'],
 		{% endfor %}
     ];
