update login field iwith email

--- a/globe/templates/user/login.html
+++ b/globe/templates/user/login.html
@@ -8,10 +8,10 @@
 				<div class="card" style="width:30rem;">
 					<div class="card-body">
 						<h2 class="card-title">Log In</h2>
-						<h6 class="card-subtitle mb-5">Enter your Username and Password</h6>
+						<h6 class="card-subtitle mb-5">Enter your Email and Password</h6>
 						<form class="card-form" method="post" action="/login/">
-							<label class="card-label" for="username">Username</label>
-							<input class="form-control" type="text" name="username" placeholder="Username" />
+							<label class="card-label" for="Email">Email</label>
+							<input class="form-control" type="text" name="email" placeholder="user@example.com" />
 							<br />
 							<label class="card-label" for="password">Password</label>
 							<input class="form-control" name="password" type="password" />
