add closing div

--- a/globe/templates/base.html
+++ b/globe/templates/base.html
@@ -37,6 +37,7 @@
 
 		<div class="nav navbar-nav navbar-right">
 			<a href="#0" class="toggle-nav nav-item nav-link menu" alt="toggle menu"><i class="fa fa-bars fa-2x"></i></a>
+		</div>
 	</div>
 </nav>
 
